controller runs now (devices not yet tested)